<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.gjayz.multimedia.ui.widget.ThemedPreferenceCategory android:title="@string/strAbout">

        <Preference
            android:key="key_about_author"
            android:title="@string/strAuthorInfo" />

        <Preference
            android:key="key_soft_version"
            android:title="@string/strSoftVersion" />

    </com.gjayz.multimedia.ui.widget.ThemedPreferenceCategory>

    <com.gjayz.multimedia.ui.widget.ThemedPreferenceCategory android:title="@string/strSoft">

        <Preference
            android:key="key_device_info"
            android:title="@string/strDeviceInfo" />

        <Preference
            android:key="key_network"
            android:title="@string/strNetwork" />

        <Preference
            android:key="key_test"
            android:title="@string/strTest" />


        <Preference
            android:key="key_test2"
            android:title="@string/strTest" />

    </com.gjayz.multimedia.ui.widget.ThemedPreferenceCategory>

</PreferenceScreen>