<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_queue_selector"
        android:title="list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/jump_to_album"
        android:title="@string/strJumpToAlbum" />

    <item
        android:id="@+id/jump_to_artis"
        android:title="@string/strJumpToArtist" />

    <item
        android:id="@+id/all_radom"
        android:title="@string/strAllRandom" />

    <item
        android:id="@+id/jump_to_eq"
        android:title="@string/strJumpToEQ" />

    <item
        android:id="@+id/jump_to_setting"
        android:title="@string/strJumpToSetting" />
</menu>